# DontPanicItsCosplay

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md
cmake/: arm-gcc-toolchain.cmake  lpc2292.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.c
src/hardware/: CMakeLists.txt  CPPLINT.cfg  interrupts.c
src/hardware/bsp/: CMakeLists.txt  bsp.c  bsp.h
src/hardware/mcu_hal/: CMakeLists.txt  system_clock.c  system_clock.h  uart.c  uart.h
src/hardware/system/: CMakeLists.txt  lpc2292.h  lpc2292.ld  startup.s  system_lpc2292.c
src/middleware/: CMakeLists.txt
src/middleware/freertos/: CMakeLists.txt  FreeRTOSConfig.h  freertos_hooks.c
src/middleware/logger/: CMakeLists.txt  logger.c  logger.h
utils/jlink_script/: flash-remote.jlink.in  flash.jlink.in
